# feed2podcast

./: .dockerignore  .gitignore  Cargo.toml  README.md  bacon.toml  docker-compose.yml  dockerfile
src/: cache.rs  data.rs  demo.rs  main.rs  schemas.rs
src/content/: generate.rs  mod.rs  routes.rs
src/feed/: routes.rs
src/webui/: mod.rs  routes.rs  templates.rs
static/: demo.html  index.html
templates/: demo.html  index.html  layout.html
