[package]
name = "feed2podcast"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "feed2podcast"
path = "src/main.rs"

[dependencies]
askama = "0.14.0"
clap = { version = "4.5.43", features = ["derive", "suggestions", "color", "cargo", "env"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
fs_extra = "1.3.0"
glob = "0.3.3"
log = "0.4.27"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["static-files", "swagger-ui"] }
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["json"] }
rss = "2.0.12"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[lints.clippy]
too_many_arguments = "allow"
